- Added support for ork/resource folder.
- Added bindings for ork scenegraph and taskgraph folders.
- Added bindings for complete ork folder in plug_land.
- Added binding for proland core in lang plugin.
- Rebuilt land plug with proland core bindings.
- Added support for proland terrain bindings.
- Added support for proland atmo bindings.
- Added bindings for proland ocean and forest plugins.
- Added support for proland graph plugin bindings.
- Added support for proland river plugin bindings.
- Added support for proland edit plugin bindings.
- Rebuilt with complete prolant bindings.
- Refactoring code to add support for sgtLuna in ork and proland.
- Rebuilt removing most warnings in sources.
- Fixed crash issue on glGenBuffer due to static glew link in ork and land plugins.
- fixed binding for ork:vec4i and ork:vec4f proper usage.
- Trying to rebuild wx plugin.
- Rebuilt wx plug with swapbuffers support. built minimal ork sample with GL and OSG. Building minimal proland core sample with OSG.
- Added support for rotation and move in proland_core test app.
- Added Porland terrain1 sample in OSG.
- Added terrain2 and terrain3 examples in OSG.
- Added terrain4 and terrain5 examples in OSG.
- Built the terrain preprocess example. But it is not working for the moment: crashing on start. To be investigated.
- Built lunatic_python27
- Tested minimal integration of python in lua.
- Small addition to python minimal1 test to compare python and lua speed.
- Removed data files for natural docs.
- Added test script for proland terrain exercise 1.
- Added GL canvas implementation to test Proland Terrain exercise 2. This is working as expected in this implementation (eg. proland_exercise2_gl)
- Added support for proland terrain exercise3 rendering.
- Added support for proland terrain exercise4 rendering.
- Added support for proland terrain exercise5 rendering.
- Moved proland tests in subfolder.
- Added support for terrain preprocess.
- Added atmosphere and ocean1 and 2 examples.